--- a/.forestry/front_matter/templates/services.yml
+++ b/.forestry/front_matter/templates/services.yml
@@ -3,15 +3,17 @@ label: Services
 hide_body: true
 display_field: services_title
 fields:
-- type: text
-  name: services_title
-  label: services_title
-- type: textarea
-  name: services_paragraph
-  label: services_paragraph
-- type: text
-  name: serviceslist_heading
-  label: serviceslist_heading
-- type: list
-  name: services_list
-  label: services_list
+  - type: text
+    name: services_title
+    label: services_title
+  - type: textarea
+    name: services_paragraph
+    label: services_paragraph
+  - type: text
+    name: serviceslist_heading
+    label: serviceslist_heading
+  - type: list
+    name: services_list
+    label: services_list
+pages:
+  - src/content/services/services.mdx
