--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,36 +1,36 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: "/static/admin/"
-webhook_url: 
+admin_path: "/static/admin"
+webhook_url:
 sections:
-- type: directory
-  path: src/content/hero
-  label: Hero
-  create: documents
-  match: "**/*"
-  new_doc_ext: app
-  templates:
-  - hero-content
-- type: directory
-  path: src/content/about
-  label: About
-  create: documents
-  match: "**/*"
-  new_doc_ext: app
-  templates:
-  - about
-- type: directory
-  path: src/content/services
-  label: Services
-  create: documents
-  match: "**/*"
-  new_doc_ext: app
-  templates:
-  - services
+  - type: directory
+    path: src/content/hero
+    label: Hero
+    create: documents
+    match: "**/*"
+    new_doc_ext: app
+    templates:
+      - hero-content
+  - type: directory
+    path: src/content/about
+    label: About
+    create: documents
+    match: "**/*"
+    new_doc_ext: app
+    templates:
+      - about
+  - type: directory
+    path: src/content/services
+    label: Services
+    create: documents
+    match: "**/*"
+    new_doc_ext: app
+    templates:
+      - services
 upload_dir: static/uploads
 public_path: "/static/uploads"
-front_matter_path: ''
+front_matter_path: ""
 use_front_matter_path: false
 file_template: ":filename:"
 build:
